# informatyka-zadania

./: CMakeLists.txt
Biblioteczka/: 32.cpp  mediana.cpp  minmax.cpp  parzyste.cpp  podslowo.cpp  rozne.cpp  srednia.cpp
DuzeLiczby/: dodawanie.cpp  jas.cpp  jas_plag.cpp
Dynamiki/: banknoty.cpp  bankomat.cpp  reszta.cpp  skapy.cpp  waz.cpp
Dynamiki_2/: cukiernia.cpp  najdluzszy_rosnacy_podciag_kwadratowe.cpp  najdluzszy_rosnacy_podciag_nlogn.cpp  najdluzszy_wspolny_podciag.cpp  plecak.cpp  plecak_pelen_keszu.cpp  plecak_z_propagacja.cpp
Gasienica/: bierki.cpp  kapusty.cpp  tarasy.cpp
IF/: data.cpp  mecz.cpp  przestepnosc.cpp
Inne/: flaga.cpp  inwersje.cpp
Matematyczne/: bisekcja.cpp  bisekcja.txt  dane.txt  figura.cpp  figura.txt  montecarlo.cpp  odp1.txt  odp3.txt  zaslona.cpp
NWD_Sito_Sumy/: Dyzio.cpp  sumy.cpp  ulamki.cpp
Sortowanie/: bombelkowe.cpp  sortowanie_rekurencyjne.cpp
Sortowanie_sort/: bizuteria.cpp  medal.cpp  telefony.cpp  unikaty.cpp
Struktury_danych/: ctrl-z.cpp  onp.cpp  tal.cpp
Struktury_danych_2/: kolejka.cpp  lista.cpp  plakatowanie.cpp  stos.cpp  trwaly.cpp
Tablice_Petle/: hipoteza.cpp  kasztany.cpp  klasy.cpp  latarnie.cpp  odwrot.cpp  papryczki.cpp  roznica.cpp  skoczek.cpp  suma.cpp
Wyszukiwanie_Binarne/: kalendarze.cpp  krazki.cpp  wieza.cpp  worek.cpp  wycinek.cpp
Zachłanne/: rycerze.cpp  trikontenerowiec.cpp
Znaki_Teksty/: dzielniki2.cpp  podslowo.cpp  statystyki.cpp  zliczacz.cpp
css/: index.html  style.css
excel/fraktale/: ajko.xlsx
ezkonkurs/: imiona.cpp  laziki.cpp
matura/2020/: odp.txt  pary.cpp
test/: hurtownia.cpp  najdluzsze_wspolne_podslowo.cpp  naszyjnik.cpp  podslowo2.cpp
word/: doc.aux  doc.bcf  doc.blg  doc.fdb_latexmk  doc.fls  doc.lof  doc.out  doc.run.xml  doc.tex  doc.toc  ref.bib
zadania/: czekolada.cpp  przedziały.cpp
